Update McKinsey Analytics Online Hackathon - Insurance renewal.ipynb

--- a/McK hackathon - July 2018/McKinsey Analytics Online Hackathon - Insurance renewal.ipynb
+++ b/McK hackathon - July 2018/McKinsey Analytics Online Hackathon - Insurance renewal.ipynb
@@ -3456,14 +3456,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5052 people registered to this McKinsey online hackathon, but only 926 people submitted a solution file."
+    "I ranked 177 out of the 5052 people that registered to this McKinsey online hackathon in the private (= final) leaderboard."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some may have forgotten to participate to the competition, and probably some others couldn't do it."
+    "In the public one, I was around the 110th position."
    ]
   },
   {
@@ -3496,14 +3496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So I ranked 177 out of the 926 subimissions in the private (= final) leaderboard."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the public one, I was around the 110th position."
+    " "
    ]
   }
  ],
